--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         Slenkyho Nitro Generator 100% Funguje
     </title>
 <head>
-    <meta property="og:title" content=Slenkyho Nitro Generator>
-    <meta content=100% legit vzdy funguje property="og:description">
+    <meta property="og:title" content="Slenkyho Nitro Generator">
+    <meta content="100% legit vzdy funguje" property="og:description">
     <meta content=https://cdn.shopify.com/s/files/1/2785/6868/products/KX10-Nitro-Keg-System_68248e2c-bf93-4c20-ada5-5601fd944a9e_grande.jpg?v=1581535313 property="og:image">
     <meta name="theme-color" content=#ffff00>
     </head>
